更换为springboot2,java1.8支持，修改了模板